--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_chicago"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/chicago" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_newyork"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/newyork" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_current"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/current" />
+    <item
+        android:id="@+id/navigation_store"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/store" />
 
 </menu>
