--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
+    app:startDestination="@id/chicagoStyle">
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.project5.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
+        android:id="@+id/chicagoStyle"
+        android:name="com.example.project5.ChicagoStyle"
+        android:label="fragment_chicago_style"
+        tools:layout="@layout/fragment_chicago_style" />
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.project5.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
+        android:id="@+id/newYorkStyle"
+        android:name="com.example.project5.NewYorkStyle"
+        android:label="fragment_new_york_style"
+        tools:layout="@layout/fragment_new_york_style" />
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.project5.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/currentOrder"
+        android:name="com.example.project5.CurrentOrder"
+        android:label="fragment_current_order"
+        tools:layout="@layout/fragment_current_order" />
+    <fragment
+        android:id="@+id/storeOrders"
+        android:name="com.example.project5.StoreOrders"
+        android:label="fragment_store_orders"
+        tools:layout="@layout/fragment_store_orders" />
 </navigation>
