--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/navigation_newyork"
         android:title="@string/new_york"
-        android:icon="@drawable/storeorders_24" />
+        android:icon="@drawable/pngfind_com_paloma_dibujo_png_3730498" />
     <item
         android:id="@+id/navigation_current"
         android:title="@string/current"
