--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -28,7 +28,7 @@
             app:layout_constraintVertical_bias="0.022" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/chicagoImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -50,7 +50,7 @@
             app:layout_constraintEnd_toStartOf="@+id/chicagoSizeSpinner"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/chicagoImageView" />
 
         <Spinner
             android:id="@+id/chicagoSizeSpinner"
@@ -60,7 +60,7 @@
             android:layout_marginEnd="12dp"
             android:contentDescription="@string/Size"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/chicagoImageView" />
 
         <TextView
             android:id="@+id/chicagoCrustSize"
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/chicagoFlavorSpinner" />
 
         <TextView
-            android:id="@+id/chicagoTextView2"
+            android:id="@+id/chicagoCrustType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
