--- a/app/src/main/res/layout/fragment_new_york_style.xml
+++ b/app/src/main/res/layout/fragment_new_york_style.xml
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newYorkFlavorSpinner" />
 
         <TextView
-            android:id="@+id/newYorktextView2"
+            android:id="@+id/newYorkCrustType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
