--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -29,8 +29,8 @@
 
         <ImageView
             android:id="@+id/chicagoImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="138dp"
+            android:layout_height="147dp"
             android:layout_marginTop="15dp"
             android:contentDescription="testImage"
             app:layout_constraintEnd_toEndOf="parent"
