--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -29,8 +29,8 @@
 
         <ImageView
             android:id="@+id/chicagoImageView"
-            android:layout_width="138dp"
-            android:layout_height="147dp"
+            android:layout_width="145dp"
+            android:layout_height="154dp"
             android:layout_marginTop="15dp"
             android:contentDescription="testImage"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
             app:layout_constraintTop_toBottomOf="@+id/chicagoToppingList" />
 
         <EditText
-            android:id="@+id/ChicagoPizzaPrice"
+            android:id="@+id/chicagoPizzaPrice"
             android:layout_width="139dp"
             android:layout_height="48dp"
             android:layout_marginTop="23dp"
