--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -127,6 +127,10 @@
             android:layout_height="48dp"
             android:layout_marginTop="23dp"
             android:layout_marginEnd="46dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:ems="10"
             android:inputType="text"
             android:text="Price"
