--- a/app/src/main/res/layout/fragment_new_york_style.xml
+++ b/app/src/main/res/layout/fragment_new_york_style.xml
@@ -28,9 +28,9 @@
             app:layout_constraintVertical_bias="0.022" />
 
         <ImageView
-            android:id="@+id/nyImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/newYorkImageView"
+            android:layout_width="145dp"
+            android:layout_height="154dp"
             android:layout_marginTop="15dp"
             android:contentDescription="testImage"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
             app:layout_constraintEnd_toStartOf="@+id/newYorkSizeSpinner"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nyImageView" />
+            app:layout_constraintTop_toBottomOf="@+id/newYorkImageView" />
 
         <Spinner
             android:id="@+id/newYorkSizeSpinner"
@@ -60,7 +60,7 @@
             android:layout_marginEnd="12dp"
             android:contentDescription="@string/Size"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nyImageView" />
+            app:layout_constraintTop_toBottomOf="@+id/newYorkImageView" />
 
         <TextView
             android:id="@+id/newYorkCrustSize"
@@ -127,6 +127,10 @@
             android:layout_height="48dp"
             android:layout_marginTop="23dp"
             android:layout_marginEnd="46dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:ems="10"
             android:inputType="text"
             android:text="Price"
