--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -105,6 +105,7 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="1dp"
+            android:cacheColorHint="@color/maroon"
             android:fadeScrollbars="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.454"
