Added to CurrentOrder

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="salmon">#FA8072</color>
     <color name="red">#881028</color>
     <color name="maroon">#812635</color>
+    <color name="backgroundSalmon">#FBC6C6</color>
 
 
 </resources>
