--- a/app/src/main/res/layout/fragment_chicago_style.xml
+++ b/app/src/main/res/layout/fragment_chicago_style.xml
@@ -32,7 +32,7 @@
             android:layout_width="145dp"
             android:layout_height="154dp"
             android:layout_marginTop="15dp"
-            android:contentDescription="testImage"
+            android:contentDescription="@string/PizzaImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:text="@string/CrustType"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#6D4C41"
             app:layout_constraintStart_toEndOf="@+id/chicagoCrustSize"
@@ -130,11 +130,11 @@
             android:layout_marginEnd="46dp"
             android:clickable="false"
             android:cursorVisible="false"
+            android:ems="10"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:ems="10"
             android:inputType="text"
-            android:text="Price"
+            android:text="@string/Price"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chicagoToppingList" />
 
