--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,187 @@
     tools:context=".CurrentOrder">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="current order" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/currentOrderRecyclerView"
+            android:layout_width="402dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderSubTotalHeading"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderNumberHeading" />
+
+        <TextView
+            android:id="@+id/currentOrderOrderNumberHeading"
+            android:layout_width="150dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="83dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/OrderNumber"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderRecyclerView"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderOrderNumber"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/currentOrderOrderNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="134dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/CurrentOrderNumber"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderRecyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderOrderNumberHeading"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555" />
+
+        <TextView
+            android:id="@+id/currentOrderSubTotalHeading"
+            android:layout_width="92dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="97dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="13dp"
+            android:text="@string/Subtotal"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderSalesTaxHeading"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderSubTotal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderRecyclerView" />
+
+        <TextView
+            android:id="@+id/currentOrderSalesTaxHeading"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="89dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="@string/SalesTax"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderOrderTotalHeading"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderSalesTax"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderSubTotalHeading" />
+
+        <TextView
+            android:id="@+id/currentOrderOrderTotalHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="85dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="26dp"
+            android:text="@string/OrderTotal"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderRemovePizzaButton"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderOrderTotal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderSalesTaxHeading" />
+
+        <Button
+            android:id="@+id/currentOrderRemovePizzaButton"
+            android:layout_width="121dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="178dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="42dp"
+            android:text="@string/RemovePizza"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderClearOrderButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderRecyclerView" />
+
+        <Button
+            android:id="@+id/currentOrderClearOrderButton"
+            android:layout_width="119dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="40dp"
+            android:text="@string/ClearOrder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/currentOrderPlaceOrderButton"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderRemovePizzaButton"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderTotalHeading"
+            app:layout_constraintVertical_bias="0.577" />
+
+        <Button
+            android:id="@+id/currentOrderPlaceOrderButton"
+            android:layout_width="118dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="176dp"
+            android:layout_marginBottom="42dp"
+            android:text="@string/PlaceOrder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderClearOrderButton"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderRecyclerView" />
+
+        <EditText
+            android:id="@+id/currentOrderSalesTax"
+            android:layout_width="122dp"
+            android:layout_height="41dp"
+            android:layout_marginEnd="89dp"
+            android:layout_marginBottom="12dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/CurrentSalesTax"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderOrderTotal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderSalesTaxHeading"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderSubTotal" />
+
+        <EditText
+            android:id="@+id/currentOrderSubTotal"
+            android:layout_width="122dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="96dp"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/CurrentSubTotal"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderSalesTax"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderSubTotalHeading"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderRecyclerView" />
+
+        <EditText
+            android:id="@+id/currentOrderOrderTotal"
+            android:layout_width="110dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="99dp"
+            android:layout_marginBottom="14dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/CurrentOrderTotal"
+            app:layout_constraintBottom_toTopOf="@+id/currentOrderPlaceOrderButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/currentOrderOrderTotalHeading"
+            app:layout_constraintTop_toBottomOf="@+id/currentOrderSalesTax" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
