--- a/app/src/main/res/layout/current_order_recycler_row.xml
+++ b/app/src/main/res/layout/current_order_recycler_row.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent">
